AC_INIT([home], [0.1],[a.s.bebenina@uspu.su])
AM_INIT_AUTOMAKE([ -Wall -Werror foreign])
AC_PROG_CXX
SDL_VERSION=2.0.12
AM_PATH_SDL2($SDL_VERSION,
	:,
	AC_MSG_ERROR([*** SDL version $SDL_VERSION nnot found])
)
PKG_CHECK_MODULES([GL],[gl])
PKG_CHECK_MODULES([GLU],[glu])
PKG_CHECK_MODULES([SDL2_IMAGE],[SDL2_image])
	
CXXFLAGS="$CXXFLAGS $SDL_CXXFLAGS $gl_CXXFLAGS $glu_CXXFLAGS $SDL2_IMAGE_CXXFLAGS"
LIBS="$LIBS $SDL_LIBS $GL_LIBS $GLU_LIBS $SDL2_IMAGE_LIBS"

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
	Makefile
	src/Makefile
])
AC_OUTPUT
